--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default 
+layout: default
 ---
 
 <!-- cover -->
@@ -15,13 +15,13 @@ Unnamed Story
 
 <div class='toc'>
 
-Contents
+  Contents
 
-<ul>
-{% for chapter in site.chapters %}
-  <li>{{ chapter.title }}</li>
-{% endfor %}
-</ul>
+  <ul>
+    {% for chapter in site.chapters %}
+    <li><a href="#{{chapter.id}}">{{ chapter.title }}</a></li>
+    {% endfor %}
+  </ul>
 
 </div>
 
@@ -31,7 +31,7 @@ Contents
 {% for chapter in site.chapters %}
 
 <div class='chapter'>
-  <h2>{{ chapter.title }}</h2>
+  <h2 id="{{chapter.id}}">{{ chapter.title }}</h2>
 
   {{ chapter.content }}
 </div>
